--- a/client/index.html
+++ b/client/index.html
@@ -1,39 +1,11 @@
  <html>
- <script src='http://192.168.1.108:8004/socket.io/socket.io.js'></script>
-  <script src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
+ <script src='http://raspberrypi:8004/socket.io/socket.io.js'></script>
+ <script src='http://code.jquery.com/jquery-2.1.0.min.js'></script>
+ <script src='./js/main.js'></script>
+ <link rel="stylesheet" type="text/css" href="./css/style.css">
 
- <script>
-	  var socket = io.connect('http://192.168.1.108:8004');
-	  var action = {direction:'stop'};
-
-	  //CONSTANTS FOR CAR ACTIONS
-	  var MOVE_FORWARD = 'forward',
-	  	  MOVE_BACKWARD = 'backward',
-	  	  STOP = 'stop'; 
-
-	  //HANDLE KEY PRESS ON THE HTML PAGE
-	  $('html').keypress(function(e){
-	  	var pressedKey = String.fromCharCode(e.keyCode).toUpperCase();
-	  	switch (pressedKey){
-	  		case "W":
-	  			action.direction = MOVE_FORWARD;
-	  			break;
-	  		case "S":
-	  			action.direction = MOVE_BACKWARD;
-	  			break;
-	  	}
-	  	socket.emit('action',action);
-	  });
-
-	  //IF RELEASED KEY WAS 'W' OR 'S' STOP THE CAR
-	  $('html').keyup(function(e){
-	   var releasedKey = String.fromCharCode(e.keyCode).toUpperCase();
-	   if(releasedKey == 'W' || releasedKey == "S"){
-	   		action.direction = STOP;
-	   		socket.emit('action', action)
-	   }
-	  })
-
-</script>
-</html>
+<div id="stream">
+	<img src='http://raspberrypi:8090/?action=stream' width="320" height="240">
+</div>
+ </html>
 
